include/ishtar.h

struct ishtar_class_t;
struct ishtar_object_t;
struct ishtar_module_t;
struct ishtar_method_header_t;
struct ishtar_method_call_info_t;
typedef enum gc_flags_t {
    NONE = 0,
    NATIVE_REF = 2,
    IMMORTAL = 4,
} gc_flags_t;
typedef enum gc_color_t {
    RED = 0,
    YELLOW = 1,
    GREEN = 2,
} gc_color_t;
typedef enum x64_instruction_target_t {
    PUSH = 0,
    MOV = 1,
} x64_instruction_target_t;
typedef enum class_flag_t {
    CLASS_NONE = 0,
    CLASS_PUBLIC = 2,
    CLASS_STATIC = 4,
    CLASS_INTERNAL = 8,
    CLASS_PROTECTED = 16,
    CLASS_PRIVATE = 32,
    CLASS_ABSTRACT = 64,
    CLASS_SPECIAL = 128,
    CLASS_INTERFACE = 256,
    CLASS_ASPECT = 512,
    CLASS_UNDEFINED = 1024,
    CLASS_UNRESOLVED = 2048,
    CLASS_PREDEFINED = 4096,
    CLASS_NOTCOMPLETED = 8192,
    CLASS_AMORPHOUS = 16384,
} class_flag_t;
typedef enum method_flags_t {
    METHOD_NONE = 0,
    METHOD_PUBLIC = 1,
    METHOD_STATIC = 2,
    METHOD_INTERNAL = 4,
    METHOD_PROTECTED = 8,
    METHOD_PRIVATE = 16,
    METHOD_EXTERN = 32,
    METHOD_VIRTUAL = 64,
    METHOD_ABSTRACT = 128,
    METHOD_OVERRIDE = 256,
    METHOD_SPECIAL = 512,
    METHOD_ASYNC = 1024,
    METHOD_GENERIC = 2048,
} method_flags_t;
typedef struct ishtar_object_t {
    struct ishtar_class_t* clazz;
    void* vtable;
    gc_flags_t flags;
    gc_color_t color;
    uint64_t refs_size;
    uint32_t vtable_size;
    int64_t __gc_id;
    int64_t m1;
    int64_t m2;
} ishtar_object_t;
typedef struct ishtar_ncd_t {
    size_t procedure;
    int64_t arg_count;
    size_t return_memory_pointer;
    size_t args_pointer;
} ishtar_ncd_t;
typedef struct x64_asm_step_t {
    x64_instruction_target_t instruction;
    int32_t _register;
    int32_t stack_offset;
} x64_asm_step_t;
typedef struct ishtar_rtoken_t {
    uint64_t value;
    uint32_t module_i_d;
    uint32_t class_i_d;
} ishtar_rtoken_t;
typedef struct ishtar_string_t {
    uint64_t id;
    uint64_t i_d;
} ishtar_string_t;
typedef struct ishtar_method_call_info_t {
    size_t module_handle;
    size_t symbol_handle;
    void* extern_function_declaration;
    void* jitted_wrapper;
    size_t compiled_func_ref;
    bool is_internal;
} ishtar_method_call_info_t;
typedef struct ishtar_method_t {
    void* _self;
    struct ishtar_method_header_t* header;
    struct ishtar_method_call_info_t p_i_info;
    uint64_t vtable_offset;
    struct ishtar_string_t* _name;
    struct ishtar_string_t* _raw_name;
    bool _ctor_called;
    method_flags_t flags;
    struct ishtar_class_t* owner;
    void* aspects;
    void* signature;
} ishtar_method_t;
typedef struct ishtar_method_header_t {
    uint32_t code_size;
    void* code;
    int16_t max_stack;
    void* exception_handler_list;
    void* labels_map;
    void* labels;
} ishtar_method_header_t;
typedef struct ishtar_class_t {
    void* _self_reference;
    void* methods;
    void* fields;
    void* aspects;
    struct ishtar_module_t* owner;
    struct ishtar_class_t* parent;
    void* full_name;
    bool _is_disposed;
    int32_t type_code;
    class_flag_t flags;
    struct ishtar_rtoken_t runtime_token;
    uint32_t i_d;
    uint16_t magic1;
    uint16_t magic2;
    uint64_t computed_size;
    bool is_inited;
    void* vtable;
    uint64_t vtable_size;
} ishtar_class_t;
typedef struct ishtar_module_t {
    void* vault;
    uint32_t i_d;
    struct ishtar_version_t version;
    void* alias_table;
    void* class_table;
    void* deps_table;
    void* aspects_table;
    void* types_table;
    void* generics_table;
    void* fields_table;
    void* string_table;
    void* const_storage;
    struct ishtar_string_t* _name;
    struct ishtar_module_t* _self;
    struct ishtar_class_t* bootstrapper;
} ishtar_module_t;