include/ishtar.rs

#[test]
fn bindgen_test_layout_ishtar_object_t() {
    const UNINIT: ::std::mem::MaybeUninit<ishtar_object_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ishtar_object_t>(),
        64usize,
        concat!("Size of: ", stringify!(ishtar_object_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ishtar_object_t>(),
        8usize,
        concat!("Alignment of ", stringify!(ishtar_object_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).clazz) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_object_t),
            "::",
            stringify!(clazz)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).vtable) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_object_t),
            "::",
            stringify!(vtable)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).flags) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_object_t),
            "::",
            stringify!(flags)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).color) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_object_t),
            "::",
            stringify!(color)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).refs_size) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_object_t),
            "::",
            stringify!(refs_size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).vtable_size) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_object_t),
            "::",
            stringify!(vtable_size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).__gc_id) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_object_t),
            "::",
            stringify!(__gc_id)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).m1) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_object_t),
            "::",
            stringify!(m1)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).m2) as usize - ptr as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_object_t),
            "::",
            stringify!(m2)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ishtar_ncd_t {
    pub procedure: usize,
    pub arg_count: i64,
    pub return_memory_pointer: usize,
    pub args_pointer: usize,
}
#[test]
fn bindgen_test_layout_ishtar_ncd_t() {
    const UNINIT: ::std::mem::MaybeUninit<ishtar_ncd_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ishtar_ncd_t>(),
        32usize,
        concat!("Size of: ", stringify!(ishtar_ncd_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ishtar_ncd_t>(),
        8usize,
        concat!("Alignment of ", stringify!(ishtar_ncd_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).procedure) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_ncd_t),
            "::",
            stringify!(procedure)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).arg_count) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_ncd_t),
            "::",
            stringify!(arg_count)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).return_memory_pointer) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_ncd_t),
            "::",
            stringify!(return_memory_pointer)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).args_pointer) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_ncd_t),
            "::",
            stringify!(args_pointer)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct x64_asm_step_t {
    pub instruction: x64_instruction_target_t,
    pub _register: i32,
    pub stack_offset: i32,
}
#[test]
fn bindgen_test_layout_x64_asm_step_t() {
    const UNINIT: ::std::mem::MaybeUninit<x64_asm_step_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<x64_asm_step_t>(),
        12usize,
        concat!("Size of: ", stringify!(x64_asm_step_t))
    );
    assert_eq!(
        ::std::mem::align_of::<x64_asm_step_t>(),
        4usize,
        concat!("Alignment of ", stringify!(x64_asm_step_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).instruction) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(x64_asm_step_t),
            "::",
            stringify!(instruction)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr)._register) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(x64_asm_step_t),
            "::",
            stringify!(_register)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).stack_offset) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(x64_asm_step_t),
            "::",
            stringify!(stack_offset)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ishtar_rtoken_t {
    pub value: u64,
    pub module_i_d: u32,
    pub class_i_d: u32,
}
#[test]
fn bindgen_test_layout_ishtar_rtoken_t() {
    const UNINIT: ::std::mem::MaybeUninit<ishtar_rtoken_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ishtar_rtoken_t>(),
        16usize,
        concat!("Size of: ", stringify!(ishtar_rtoken_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ishtar_rtoken_t>(),
        8usize,
        concat!("Alignment of ", stringify!(ishtar_rtoken_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).value) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_rtoken_t),
            "::",
            stringify!(value)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).module_i_d) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_rtoken_t),
            "::",
            stringify!(module_i_d)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).class_i_d) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_rtoken_t),
            "::",
            stringify!(class_i_d)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ishtar_string_t {
    pub id: u64,
    pub i_d: u64,
}
#[test]
fn bindgen_test_layout_ishtar_string_t() {
    const UNINIT: ::std::mem::MaybeUninit<ishtar_string_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ishtar_string_t>(),
        16usize,
        concat!("Size of: ", stringify!(ishtar_string_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ishtar_string_t>(),
        8usize,
        concat!("Alignment of ", stringify!(ishtar_string_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).id) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_string_t),
            "::",
            stringify!(id)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).i_d) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_string_t),
            "::",
            stringify!(i_d)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ishtar_method_call_info_t {
    pub module_handle: usize,
    pub symbol_handle: usize,
    pub extern_function_declaration: *mut ::std::os::raw::c_void,
    pub jitted_wrapper: *mut ::std::os::raw::c_void,
    pub compiled_func_ref: usize,
    pub is_internal: bool,
}
#[test]
fn bindgen_test_layout_ishtar_method_call_info_t() {
    const UNINIT: ::std::mem::MaybeUninit<ishtar_method_call_info_t> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ishtar_method_call_info_t>(),
        48usize,
        concat!("Size of: ", stringify!(ishtar_method_call_info_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ishtar_method_call_info_t>(),
        8usize,
        concat!("Alignment of ", stringify!(ishtar_method_call_info_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).module_handle) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_method_call_info_t),
            "::",
            stringify!(module_handle)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).symbol_handle) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_method_call_info_t),
            "::",
            stringify!(symbol_handle)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).extern_function_declaration) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_method_call_info_t),
            "::",
            stringify!(extern_function_declaration)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).jitted_wrapper) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_method_call_info_t),
            "::",
            stringify!(jitted_wrapper)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).compiled_func_ref) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_method_call_info_t),
            "::",
            stringify!(compiled_func_ref)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).is_internal) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_method_call_info_t),
            "::",
            stringify!(is_internal)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ishtar_method_t {
    pub _self: *mut ::std::os::raw::c_void,
    pub header: *mut ishtar_method_header_t,
    pub p_i_info: ishtar_method_call_info_t,
    pub vtable_offset: u64,
    pub _name: *mut ishtar_string_t,
    pub _raw_name: *mut ishtar_string_t,
    pub _ctor_called: bool,
    pub flags: method_flags_t,
    pub owner: *mut ishtar_class_t,
    pub aspects: *mut ::std::os::raw::c_void,
    pub signature: *mut ::std::os::raw::c_void,
}
